--- a/06_local_AD.tex
+++ b/06_local_AD.tex
@@ -4,7 +4,7 @@ This chapter will consider a different approach on how to use AD to solve PDEs. 
 
 \section{Implementation}
 \label{sec:LADImplementation}
-To get a better understanding of how local AD works, it is best to look at how it is implemented\footnote{In the following I will explain a minor simplified implementation. This is to keep the focus on the essential parts of the implementation. The left out parts will be discussed in \autoref{sec:optimizingLocalAD}}. Like for \texttt{FAD} and \texttt{CJAD} I have implemented local AD using a struct called \texttt{LAD}:
+To get a better understanding of how local AD works, it is best to look at how it is implemented\footnote{In the following I will explain a minor simplified implementation. This is to keep the focus on the essential parts of the implementation. The left-out parts will be discussed in \autoref{sec:optimizingLocalAD}}. Like for \texttt{FAD} and \texttt{CJAD} I have implemented local AD using a struct called \texttt{LAD}:
 \lstinputlisting{code/LAD_structSimple.jl}
 Since we now only operate on one cell at the time, the implementation of local AD is simpler than for \texttt{FAD} and \texttt{CJAD}. The value of the AD-variable is now only a scalar and the Jacobian matrices are replaced by a vector of derivatives. These are the derivatives  with respect to the primary variables in the cell. For the single-phase flow solver in \autoref{ch:FlowSolver}, the \texttt{derivatives} vector will be of length one, as each cell only contain one primary variable (pressure). The implementation of \texttt{LAD} is, however, with \texttt{derivatives} as a vector. This is for the opportunity to implement more complex simulations like a two- or three-phase simulator, where each cell can contain multiple primary variables for the amount of water, oil and/or gas present in the cell (an example of a two-phase simulator can be seen in \autoref{sec:TwoPhaseSimulation}).
 
@@ -30,20 +30,20 @@ In \texttt{FAD} and \texttt{CJAD}, we made all the primary AD-variables before t
 
 In line number ten, when \texttt{fromCell} and \texttt{toCell} are two neighboring cells, the divergence term in \texttt{presEq} is calculated. Like for \texttt{timeDerivative()}, we create the primary AD-variables inside the function, but since we calculate the flux from one cell to another, we have to be careful with which direction we calculate the flux and which cell we want the derivative with respect to. Since the varying variables are named \texttt{fromCell} and \texttt{toCell}, it is natural that the function \texttt{flux()}, calculates the flux from \texttt{fromCell} to \texttt{toCell}:
 \lstinputlisting{code/fluxFunctionLocalAD.jl}
-What needs to be chosen is which cell we want the derivative with respect to. The choice only affect which indices of the Jacobian the calculated derivatives should be added or subtracted to. In \texttt{flux()}, I have decided to calculate the derivative with respect to \texttt{fromCell}. The two first lines show the consequence of this, where \texttt{pFrom} is initialized with a derivative of $1$ and \texttt{pTo} as a constant. This choice leads to the following code for updating \texttt{FlowSystem} at line number ten in \texttt{assembleFlowSystem!()}:
+What needs to be chosen is which cell we want the derivative with respect to. The choice only affects which indices of the Jacobian the calculated derivatives should be added or subtracted to. In \texttt{flux()}, I have decided to calculate the derivative with respect to \texttt{fromCell}. The two first lines show the consequence of this, where \texttt{pFrom} is initialized with a derivative of $1$ and \texttt{pTo} as a constant. This choice leads to the following code for updating \texttt{FlowSystem} at line number ten in \texttt{assembleFlowSystem!()}:
 \lstinputlisting{code/fluxCodeLocalAD.jl}
-The value of \texttt{fluxLAD} is added to \texttt{eqVal} and the derivative of the flux with respect to \texttt{fromCell} is added to \texttt{globalJac}. In addition we know that the flux from \texttt{fromCell} to \texttt{toCell} is the same as from \texttt{toCell} to \texttt{fromCell}, but with negative sign. This means that the derivative of the flux from \texttt{toCell} with respect to \texttt{fromCell} needs to be subtracted with \texttt{fluxLad.derivatives}. For a facet between two neighbors, we will with \texttt{assembleFlowSystem!()} calculate the value of the flux through the facet twice, only with different signs. You might think that we could save time by subtracting \texttt{fs.eqVal[toCell]} with \texttt{fluxLAD.val}, but since we also will need the opposite derivatives of this particular flux, there will be small, or next to none, computational gain of exploiting this fact. In worst case it might actually become a slower implementation, as we would have had to keep track of which fluxes have been added to which cells. When the fluxes from all the neighbors have been added up for a cell, we have obtained the divergence in that cell. 
+The value of \texttt{fluxLAD} is added to \texttt{eqVal} and the derivative of the flux with respect to \texttt{fromCell} is added to \texttt{globalJac}. In addition, we know that the flux from \texttt{fromCell} to \texttt{toCell} is the same as from \texttt{toCell} to \texttt{fromCell}, but with negative sign. This means that the derivative of the flux from \texttt{toCell} with respect to \texttt{fromCell} needs to be subtracted with \texttt{fluxLad.derivatives}. For a facet between two neighbors, we will with \texttt{assembleFlowSystem!()} calculate the value of the flux through the facet twice, only with different signs. You might think that we could save time by subtracting \texttt{fs.eqVal[toCell]} with \texttt{fluxLAD.val}, but since we also will need the opposite derivatives of this particular flux, there will be small, or next to none, computational gain of exploiting this fact. In worst case it might actually become a slower implementation, as we would have had to keep track of which fluxes have been added to which cells. When the fluxes from all the neighbors have been added up for a cell, we have obtained the divergence in that cell. 
 
 Line number eight in \texttt{assembleFlowSystem!()} is the last line I have not commented and it is where the well equations, \texttt{rateEq} and \texttt{ctrlEq}, are handled. This line is executed if both \texttt{fromCell} and \texttt{toCell} either refer to one of the cells containing a well, the bottom-hole pressure, or the total production. The information on which cells fulfilling this condition lies in \texttt{well}. The calculation is performed by handling every case such that the correct residual functions, namely the \texttt{rateEq} or the \texttt{ctrlEq}, are calculated and added to the correct indices in \texttt{FlowSystem}.
 
-Summed up, the calculation of the residual functions using local AD is based on two modules. The first is the actual AD tool with the \texttt{LAD} struct, and the second is \texttt{FlowSystem}, which keeps track of the global system and what calculations should be performed by the AD tool. With this approach, we loose some of the advantages using the other AD tools where the discrete residual functions looked very similar to the continuous case, like explained in \autoref{sec:setupGovEq}. The main structure of \texttt{assembleFlowSystem!()} will, however, be the same no matter what type of simulation, hence making modifications to the code, or building another simulator, will not demand a complete change of the code structure.
+Summed up, the calculation of the residual functions using local AD is based on two modules. The first is the actual AD tool with the \texttt{LAD} struct, and the second is \texttt{FlowSystem}, which keeps track of the global system and what calculations should be performed by the AD tool. With this approach, we lose some of the advantages using the other AD tools where the discrete residual functions looked very similar to the continuous case, like explained in \autoref{sec:setupGovEq}. The main structure of \texttt{assembleFlowSystem!()} will, however, be the same no matter what type of simulation, hence making modifications to the code, or building another simulator, will not demand a complete change of the code structure.
 
 Now that the assemble of the governing equations are implemented, we need a main loop that performs the simulation. Since we have separated the assemble of the equations into a single function, the main loop will be very similar to the one outlined in \autoref{sec:setupGovEq}. The only difference is that instead of evaluating a residual function \texttt{F}, we assemble the equations using \texttt{assembleFlowSystem!()}. A pseudo code of the new main loop can be seen below. 
 \lstinputlisting{code/FlowSimulatorLocalAD.jl}
 
 \section{Optimizing Local AD}
 \label{sec:optimizingLocalAD}
-As explained in the beginning of this chapter, the main idea behind local AD is to reuse the Jacobian to save memory usage and extra memory allocations. The implementation given in \autoref{sec:LADImplementation} has nevertheless left out some small, but key parts of the implementation that will massively decrease the memory and CPU usage. This is purely implementation specific differences that have been left out to make the introduction to local AD more clear. It will not change the theory behind using local AD to solve PDEs.
+As explained in the beginning of this chapter, the main idea behind local AD is to reuse the Jacobian to save memory usage and extra memory allocations. The implementation given in \autoref{sec:LADImplementation} has nevertheless left out some small, but key parts of the implementation that will massively decrease the memory and CPU usage. This is purely implementation specific differences that have been left out to make the introduction to local AD clearer. It will not change the theory behind using local AD to solve PDEs.
 
 \subsection{Dynamic VS Static Arrays}
 The difference between a dynamic array and a static array is that a dynamic array can be extended or shortened as much as you like while a static array has a fixed length. Using a static array will give computational gain concerning speed and memory allocations compared to a dynamic array. This is because the compiler knows that a static array has the given fixed length forever and hence it can allocate the exact memory needed in advance and optimize the machine code accordingly. With a dynamic array, the compiler does not know if the array will grow larger, or become smaller, and it is much harder to optimize the machine code. 
@@ -52,7 +52,7 @@ Julia has a package called \emph{\cite{StaticArrays}} that provides static array
 
 When the implementation is changed to use static vectors, it needs to know how long these vectors are. When building a simulator, it is not a problem to say in advance how many derivatives we need, and once the compiler knows this before compilation, it can optimize the machine code. OPM solves this by creating a template class containing the length of the gradient vector \citep{lauser2018local}. This ensures that the compiler always knows that for this simulator, the static vector will always have the given fixed length. This is important because we do not want to create \texttt{LAD} structs with different lengths for \texttt{LAD.derivatives}. In addition, if we define this clearly, the compiler knows exactly how much memory is needed when we allocate a new \texttt{LAD} variable. By giving the compiler this information before compilation, we help it optimizing the machine code. This will also make the implementation of the operators to \texttt{LAD} easier, as we know for certain that all \texttt{LAD} variables will have \texttt{derivatives} vectors with the same length. The best implementation I have found for this in Julia is to declare a global constant variable in the local AD module such that the new implementation of \texttt{LAD} becomes:
 \lstinputlisting{code/LAD_struct.jl}
-The disadvantage with this implementation is that the Local AD module needs to be modified to work for simulations with more primary variables for each cell. Since the implementations of the operators are unchanged, this modifications will only consist of changing the value of \texttt{NUM\_DERIV}. However, it would be better if Julia had the opportunity to pass in an argument into the \texttt{LAD} module. In this way the module could be compiled with any given value for \texttt{NUM\_DERIV}. As it is now, it is not possible to have one single \texttt{LAD} module and two different simulators with different number of primary variables, at the same time in the same directory. A workaround could be to have multiple \texttt{LAD} modules with the only difference being the value of \texttt{NUM\_DERIV}. This would be a fully functional workaround, but not a very elegant one.
+The disadvantage with this implementation is that the Local AD module needs to be modified to work for simulations with more primary variables for each cell. Since the implementations of the operators are unchanged, this modification will only consist of changing the value of \texttt{NUM\_DERIV}. However, it would be better if Julia had the opportunity to pass in an argument into the \texttt{LAD} module. In this way the module could be compiled with any given value for \texttt{NUM\_DERIV}. As it is now, it is not possible to have one single \texttt{LAD} module and two different simulators with different number of primary variables, at the same time in the same directory. A workaround could be to have multiple \texttt{LAD} modules with the only difference being the value of \texttt{NUM\_DERIV}. This would be a fully functional workaround, but not a very elegant one.
 
 \section{Flow Solver Results for Local AD}
 \label{sec:flowSolverWithLAD}
@@ -95,9 +95,9 @@ As discussed in \autoref{ch:FlowSolver}, by only looking at the assemble of the 
 
 \section{Two-Phase Incompressible Flow}
 \label{sec:TwoPhaseSimulation}
-Previously in this thesis, I have only looked at primary production, where we have single-phase flow, with oil as the only fluid present. As explained in the introduction, at most 30\% of the oil in the reservoir will be extracted unless we apply external forces to the reservoir. This normally consists of injecting either water, gas, or both, into the reservoir in a secondary production. There is also a third production phase called enhanced oil recovery, or tertiary production, but as the purpose of this thesis is not oil recovery, but to see how the AD tools perform when simulating oil recovery, I will not go into this subject. More detailed information about oil recovery can be found in \citet{lieMrstUrl}. I will also describe a simplified model of secondary production, where sufficient information for this example is that we want to simulate how water flows from an injector and into a reservoir full of oil. This will be simulated for a subregion of Model 2 from the 10th SPE Comparative Solution Project (SPE10) \citep{SPE10}. This model represents a simplified reservoir geometry with somewhat exaggerated geological heterogeneity and was created as a challenging case to benchmark upscaling methods against each other. Like in \autoref{ch:FlowSolver}, I have called MATLAB and MRST from Julia to initialize the SPE10 grid and to make plots.
+Previously in this thesis, I have only looked at primary production, where we have single-phase flow, with oil as the only fluid present. As explained in the introduction, at most 30\% of the oil in the reservoir will be extracted unless we apply external forces to the reservoir. This normally consists of injecting either water, gas, or both, into the reservoir in a secondary production. There is also a third production phase called enhanced oil recovery, or tertiary production, but as the purpose of this thesis is not oil recovery, but to see how the AD tools perform when simulating oil recovery, I will not go into this subject. More detailed information about oil recovery can be found in \citet{lieMrstUrl}. I will also describe a simplified model of secondary production, where sufficient information for this example is that we want to simulate how water flows from an injector and into a reservoir full of oil. This will be simulated for a sub region of Model 2 from the 10th SPE Comparative Solution Project (SPE10) \citep{SPE10}. This model represents a simplified reservoir geometry with somewhat exaggerated geological heterogeneity and was created as a challenging case to benchmark upscaling methods against each other. Like in \autoref{ch:FlowSolver}, I have called MATLAB and MRST from Julia to initialize the SPE10 grid and to make plots.
 
-The SPE10 (Model 2) grid is split into 85 layers. Each layer contains 60$\times$220 cells, making the total number of grid cells 1,122,000. To simplify the implementation, I will only look at a single layer, layer 5, making the problem two-dimensional with 13,200 cells. The SPE10 grid differs from the grid in \autoref{ch:FlowSolver} in that the permeability and porosity varies throughout the grid. This will affect the path of the water flow. \autoref{fig:porositySPE10} shows the porosity in the grid and \autoref{fig:permeabilitySPE10} shows a logarithmic color plot of the permeability. Both figures also display the placement of the water injector in the center of the grid, and the four wells at each corner. \autoref{fig:porositySPE10} shows that the rock around wells P3 and P4 are very dense (low porosity) and \autoref{fig:permeabilitySPE10} naturally shows that the permeability is also low in this area. This gives us an expectation that the injected water will primarily flow to the left.
+The SPE10 (Model 2) grid is split into 85 layers. Each layer contains 60$\times$220 cells, making the total number of grid cells 1,122,000. To simplify the implementation, I will only look at a single layer, layer 5, making the problem two-dimensional with 13,200 cells. The SPE10 grid differs from the grid in \autoref{ch:FlowSolver} in that the permeability and porosity vary throughout the grid. This will affect the path of the water flow. \autoref{fig:porositySPE10} shows the porosity in the grid and \autoref{fig:permeabilitySPE10} shows a logarithmic color plot of the permeability. Both figures also display the placement of the water injector in the center of the grid, and the four wells at each corner. \autoref{fig:porositySPE10} shows that the rock around wells P3 and P4 are very dense (low porosity) and \autoref{fig:permeabilitySPE10} naturally shows that the permeability is also low in this area. This gives us an expectation that the injected water will primarily flow to the left.
 \begin{figure}[H]
     \centering
     \includegraphics[width = \textwidth,clip=true,trim=20 130 10 90]{figures/porositySPE10.eps}
