--- a/backmatter/references.bib
+++ b/backmatter/references.bib
@@ -74,7 +74,7 @@ year = {n.d.},
 }
 
 @misc{opm,
-  key = {Open Porous Media Hompage},
+  key = {Open Porous Media Homepage},
   url = {https://opm-project.org},
   urldate = {2018-11-22},
   year = {n.d.},
