--- a/05_flow_solver_with_AD.tex
+++ b/05_flow_solver_with_AD.tex
@@ -1,10 +1,10 @@
-\chapter{Flow Solver With Automatic Differentiation}
+\chapter{Flow Solver with Automatic Differentiation}
 \label{ch:FlowSolver}
 To compare the different AD implementations in Julia and MATLAB I have implemented MRST's tutorial, "Single-phase Compressible AD Solver" from \texttt{flowSolverTutorialAD.m} \emph{\citep{flowSolverADExample}}, in Julia. The example is made as an introduction to how AD can be used in MRST, hence it is a good example to use when the goal is to compare the implementations of AD in MATLAB and Julia. 
 
 \section{Grid Construction}
 \label{sec:GridConstruction}
-The example consist of modelling how the pressure drops within a rectangular reservoir measuring $200\times 200 \times 50 \text{m}^3$ when we have a well producing oil. As mentioned in the introduction, this is called primary production, and because of high pressure in the reservoir, the oil flows out by itself. "Single-phase solver" only means that we do not have different phases of fluids, like water and/or gas, present during the simulation. In this simulation we assume there is only oil present in the reservoir. As the main purpose of this example is to compare the AD tools in MATLAB and Julia, and not the process of solving the problem, including setting up the grid and other necessary variables, some of the initialization and plotting have been performed in Julia by calling code from MRST. By using the package MATLAB.jl \emph{\citep{MATLAB.jl}}, we can call MATLAB functions from Julia and retrieve the output variables. This is done by the function call
+The example consists of modelling how the pressure drops within a rectangular reservoir measuring $200\times 200 \times 50 \text{m}^3$ when we have a well producing oil. As mentioned in the introduction, this is called primary production, and because of high pressure in the reservoir, the oil flows out by itself. "Single-phase solver" only means that we do not have different phases of fluids, like water and/or gas, present during the simulation. In this simulation we assume there is only oil present in the reservoir. As the main purpose of this example is to compare the AD tools in MATLAB and Julia, and not the process of solving the problem, including setting up the grid and other necessary variables, some of the initialization and plotting have been performed in Julia by calling code from MRST. By using the package MATLAB.jl \emph{\citep{MATLAB.jl}}, we can call MATLAB functions from Julia and retrieve the output variables. This is done by the function call
 \lstinputlisting{code/mxcall.jl}
 where we have three input parameter and two output parameters. We have to specify the number of output parameters after the MATLAB function name.  By calling MATLAB from Julia, we can use MRST's \texttt{G = computeGeometry(...)} function to set up the grid for the simulation. The grid of the reservoir can be seen in \autoref{fig:flowSolverGrid}. The variable \texttt{G}, that contains the grid properties, is now a structured array (struct), having all the information on cells, facets, vertices and nodes that we need to make the discrete gradient- and divergence operator as explained in \autoref{sec:ApplicationsAD}. 
 
@@ -15,7 +15,7 @@ Next, we define the properties of the rock. As explained in \autoref{sec:OilRese
 \end{equation}
 In this expression, pv$_r$ is the rock pore volume, in a cell, at a reference pressure $p_r$. The value of pv$_r$ is given by the porosity of the rock, multiplied with the total volume of the cell. $c_r$ is a constant controlling how the rock is compressed. The pore volume of the rock, as a function of pressure values, are visualized in \autoref{fig:flowSolverPoreVolume}. The graph shows that for a cell with volume $2000\text{m}^3$ there is approximately room for $600\text{m}^3$ oil.
 
-Since we assume that the oil have a constant compressibility, the density of the oil is given as an analytic function of pressure 
+Since we assume that the oil has a constant compressibility, the density of the oil is given as an analytic function of pressure 
 \begin{equation}
     \rho(p) = \rho_r\exp[c\cdot(p-p_r)],
     \label{eq:pressureSolverDensity}
@@ -62,7 +62,7 @@ for the fluid density given by \myeqref{eq:pressureSolverDensity} and $g$ as the
 
 \section{Setup of Governing Equations}
 \label{sec:setupGovEq}
-After initializing the grid we want to define the discrete gradient- and divergence operator, as well as the transmissibilities as explained in \myeqref{eq:transmissibility}. This is done by exploiting that we have all the necessary information about the grid properties, such as the cells centroid coordinates, facets area, and so on, stored in the struct \texttt{G}. In \texttt{rock} we have stored the permeability inside each cell that will affect the flux through each facet. With all this information we can now obtain the transmissibilities \texttt{T} and the discrete operators
+After initializing the grid, we want to define the discrete gradient- and divergence operator, as well as the transmissibilities as explained in \myeqref{eq:transmissibility}. This is done by exploiting that we have all the necessary information about the grid properties, such as the cells centroid coordinates, facets area, and so on, stored in the struct \texttt{G}. In \texttt{rock} we have stored the permeability inside each cell that will affect the flux through each facet. With all this information we can now obtain the transmissibilities \texttt{T} and the discrete operators
 \lstinputlisting{code/grad_and_div.jl}
 
 \begin{wrapfigure}{R}{5.5cm}
@@ -106,7 +106,7 @@ The pressure drop near the well usually takes place on a much shorter length sca
 \begin{equation*}
     q = \frac{\rho}{\mu}\mbox{WI}(p_c - p_r),
 \end{equation*}
-where \mbox{WI} is properties of the rock and the oil at the applicable cell. Since this equation only apply on a few of the cells in the reservoir, we also need a list of the indices \texttt{wc} for the perforated cells. These indices and the \mbox{WI} variable are given by the \texttt{W} variable we received from the \texttt{addWell} function. The discrete expression for the production in all the perforated cells are given by
+where \mbox{WI} is properties of the rock and the oil at the applicable cell. Since this equation only apply on a few of the cells in the reservoir, we also need a list of the indices \texttt{wc} for the perforated cells. These indices and the \mbox{WI} variable are given by the \texttt{W} variable we received from the \texttt{addWell} function. The discrete expression for the production in all the perforated cells is given by
 \lstinputlisting{code/q_conn.jl}
 The residual expression for the total production \texttt{qS} is then given by summing up all the production from each perforated cell, giving the expression \texttt{rateEq}
 \lstinputlisting{code/rateEq.jl}
@@ -148,7 +148,7 @@ However, our main interest is to observe how the different AD tools perform when
 
 As explained in \autoref{ch:Implementation}, the different types of AD mentioned store the Jacobians differently. Both \texttt{FAD}, \texttt{CJAD} and the two AD implementations in MRST, will, at least eventually, store the Jacobians as a list of sparse matrices where each element in the list is the Jacobian with respect to one primary variable. In this example, this is expected to be a lot more efficient than storing the full $1,002\times 1,002$ Jacobian as  \texttt{ForwardDiff} does.
 
-To benchmark the different methods, we need to do some extra work to make sure that it is actually the AD we test and not other parts of the code. This is especially important for the code running in Julia, since when we call MATLAB from Julia, it will be a lot of overhead. This means that the setup of the discrete gradient- and divergence operator will take longer when performed in MATLAB called from Julia, than when we do it directly in MATLAB. If we want to run the full simulation, it is not possible to separate the AD part fully, but if we only test the main-loop containing the Newton-Raphson method, AD will be a dominating part of the computations together with the linear solver \texttt{f.jac\textbackslash f.val}. This means that we at least will get an indication of how well the AD tools perform compared to each other. To see how the different methods scale as the discretization becomes finer, and the system we solve grow, the benchmark consist of three different discretizations. The first is the original setup with 10 cells in the spatial directions $x$, $y$, and $z$. This gives a total number of 1,000 cells in the reservoir. Then, I have also benchmarked the implementations for 20 and 30 cells in each spatial direction. The time spent solving the system for the different methods can be seen in \autoref{tab:FlowSolverSpeedTest}.
+To benchmark the different methods, we need to do some extra work to make sure that it is only the AD we test and no other parts of the code. This is especially important for the code running in Julia, since when we call MATLAB from Julia, it will be a lot of overhead. This means that the setup of the discrete gradient- and divergence operator will take longer when performed in MATLAB called from Julia, then when we do it directly in MATLAB. If we want to run the full simulation, it is not possible to separate the AD part fully, but if we only test the main-loop containing the Newton-Raphson method, AD will be a dominating part of the computations together with the linear solver \texttt{f.jac\textbackslash f.val}. This means that we at least will get an indication of how well the AD tools perform compared to each other. To see how the different methods scale as the discretization becomes finer, and the system we solve grow, the benchmark consists of three different discretizations. The first is the original setup with 10 cells in the spatial directions $x$, $y$, and $z$. This gives a total number of 1,000 cells in the reservoir. Then, I have also benchmarked the implementations for 20 and 30 cells in each spatial direction. The time spent solving the system for the different methods can be seen in \autoref{tab:FlowSolverSpeedTest}.
 \begin{table}[H]
     \centering
     \caption{Table with speed tests of different AD methods solving the "Single-Phase Compressible AD Solver" for different discretizations.}
